# living-logs

./: README.md  pyproject.toml
docs/: Cli.md  LogJournalFileFormat.md
src/: Log.py  LogJournal.py  config.py  main.py
