[tool.poetry]
name = "living-logs"
version = "0.1.0"
description = "Keep logs about yourself."
authors = ["ramazanemreosmanoglu <ramazanemre@protonmail.com>"]
license = "GNU GPL 3.0"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
